--- a/trunk/tesi/tesi.lyx
+++ b/trunk/tesi/tesi.lyx
@@ -522,10 +522,10 @@ Primafrost si occupa di servire i numerosi canali di vendita del Gruppo
  grossisti) ponendo sempre molta attenzione non solo alla qualità della
  merce trasportata, ma anche alla precisione dell’ordine evaso e alla tempestivi
 tà della distribuzione.
- I suoi punti di vendita sono sparsi per tutta la prte settentrionale dell'Itali
-a, mentre il magazzino centrale è situato vicino a Mantova.
+ I suoi punti di vendita sono sparsi per tutta la parte settentrionale dell'Ital
+ia, mentre il magazzino centrale è situato vicino a Mantova.
  Attualmente il numero dei punti di vendita è in continuo aumento, e Primafrost
- doveva rivedere il metoo con cui gestiva la creazione delle gite ed il
+ doveva rivedere il metodo con cui gestiva la creazione delle gite ed il
  dispiegamento della sua flotta di veicoli.
  
 \end_layout
@@ -576,14 +576,17 @@ Vehicle routing Problem
 \end_inset
 
 .
- Questo particolare problema è tuttora etesamente trattato in ambito di
+ Questo particolare problema è tuttora estesamente trattato in ambito di
  ricerca, nonostante siano già stati spesi già 40 anni di lavoro.
+ sono state studiate istanze con più o meno ogni genere di limitazione ragionevo
+lmente significativa, dalla capacità limitata dei veicoli fino a limitazioni
+ presenti sui punti di consegna o sulle qualifiche dei conducenti.
 \end_layout
 
 \begin_layout Standard
 Questa tipologia di problemi infatti è interessante sia da un punto di vista
  accademico per la sua elevata complessità, sia da un punto di vista commerciale
-, poichè le voci di costo interessate sono in genere dell'ordine di milioni
+, poiché le voci di costo interessate sono in genere dell'ordine di milioni
  di euro, e continuamente crescenti.
  Anche la più piccola percentuale di risparmio su totali così grandi è quindi
  sempre significativa per qualsiasi bilancio aziendale.
@@ -593,10 +596,7 @@ Questa tipologia di problemi infatti è interessante sia da un punto di vista
 La soluzione del problema risultava quindi economicamente vantaggiosa per
  entrambe le aziende, e lasciava intravedere interessanti possibili futuri
  sviluppi.
-\end_layout
-
-\begin_layout Standard
-In particolare Wincor Nixdorf aveva intenzione, nel caso il progetto fosse
+ In particolare Wincor Nixdorf aveva intenzione, nel caso il progetto fosse
  andato a buon fine, di proporre l'idea anche ad altri suoi clienti.
 \end_layout
 
@@ -623,11 +623,11 @@ Alcune tra le soluzione maggiormente accreditate appartengono ad una compagnia,
 \end_layout
 
 \begin_layout Standard
-Le soluzioni software di PTV sono oggi utilizzate da un'ampio pubblico,
+Le soluzioni software di PTV sono oggi utilizzate da un ampio pubblico,
  e anche da diverse aziende più o meno grandi.
  Si può dire che ovunque vi sia un problema di instradamento di veicoli
  vi sia virtualmente spazio per l'adozione dei suo prodotti, quindi si può
- ben immaginare perchè abbia avuto una diffusione così endemica.
+ ben immaginare perché abbia avuto una diffusione così endemica.
 \end_layout
 
 \begin_layout Standard
@@ -641,7 +641,37 @@ Come si può intuire, PTV ha diverse partnership sparse un po' per tutta
  Europa.
  In Italia il partner di riferimento è TPS, con cui Wincor Nixdorf aveva
  già preso contatti nel periodo in cui arrivai.
+ Avevano già utilizzato infatti un'altra volta una soluzione PTV sempre
+ per Primafrost.
+\end_layout
+
+\begin_layout Standard
+Il pacchetto impiegato era 
+\begin_inset Quotes eld
+\end_inset
+
+Maps&Guide
+\begin_inset Quotes erd
+\end_inset
+
+, ed era servito poichè aveva capacità simili a Intertour.
+ Una differenza rispetto a Intertour era nella rappresentazione delle mappe:
  
+\begin_inset Quotes eld
+\end_inset
+
+Maps&Guide
+\begin_inset Quotes erd
+\end_inset
+
+ era in grado di rappresentare l'effettivo percorso del veicolo sul manto
+ stradale con una grafica che a prima vista ricordava il ben più famoso
+ Google Maps.
+ Questo strumento era infatti stato integrato all'interno di un'interfaccia
+ piuttosto complessa per la gestione delle consegne.
+ Quest'interfaccia era anch'essa stata realizzata da Tuttavia questo strumento,
+ benché fosse stato già integrato in un'interfaccia p era limitato, in quanto
+ non era in grado
 \end_layout
 
 \begin_layout Section*
@@ -651,8 +681,8 @@ Contributo della tesi
 \begin_layout Standard
 L'azienda infatti stava guardando il mercato alla ricerca di una soluzione
  che le paresse adatta, in modo da poter effettuare un primo studio di fattibili
-tà, sulla base del quale avrebbe deciso il mods operandi per risolvere il
- problema del suo cliente.
+tà, sulla base del quale avrebbe deciso il modus operandi per risolvere
+ il problema del suo cliente.
 \end_layout
 
 \begin_layout Standard
@@ -672,7 +702,7 @@ Il mio ingresso nell'azienda è avvenuto un po' dopo l'inizio effettivo del
 
 \begin_layout Standard
 Al momento del mio ingresso, si era ormai inquadrato abbastanza nello specifico
- quali arcitetture software potevano soddisfare i requisiti impostici dal
+ quali architetture software potevano soddisfare i requisiti impostici dal
  cliente.
  Rimaneva però comunque una scelta tra due alternative: vi era la possibilità
  di implementare tutto utilizzando un'applicazione 
@@ -700,19 +730,26 @@ Da entrambe queste due soluzioni ci si aspettava che producessero buoni
  da qualche altro componente della famiglia XServer.
  Dal punto di vista dell'integrazione invece il margine di variabilità era
  abbastanza ampio: l'interfaccia sviluppata per Primafrost era stata sviluppata
- utilizzando AJAX, per cui poteva darsi che l'achitettura basata su Web
+ utilizzando AJAX, per cui poteva darsi che l'architettura basata su Web
  Service fosse più facile da integrare.
 \end_layout
 
 \begin_layout Standard
-Il nostro obiettivo era dunque quello di studiare le due archietture, osservare
+Il nostro obiettivo era dunque quello di studiare le due architetture, osservare
  le loro potenzialità, i loro limiti, ed infine scegliere quali delle due
  si adattava meglio alle nostre esigenze.
- L'obiettivo che mi era statao assegnato in particolare era quello di studiare
+ L'obiettivo che mi era stato assegnato in particolare era quello di studiare
  il framework MEFISTO ed il suo funzionamento.
  Questa indagine mi avrebbe portato, anche se allora non lo immaginavo,
  a conoscere il vasto background di informazioni che sottostava al funzionamento
  dei software da noi impiegati.
+\end_layout
+
+\begin_layout Standard
+Una volta conclusa la mia esperienza con Primafrost ho successivamente deciso
+ di studiare una soluzione migliore ad un problema in cui ci eravamo imbattuti,
+ tentando un approccio basato su algoritmi genetici.
+ Questa parte è interamente descritta in un capitolo a parte.
 \end_layout
 
 \begin_layout Section*
@@ -720,7 +757,7 @@ Metodologia usata
 \end_layout
 
 \begin_layout Standard
-Era importante coinvolgere il cliente e conteporaneamente fargli percepire
+Era importante coinvolgere il cliente e contemporaneamente fargli percepire
  che da parte nostra vi era interesse per il suo problema.
  Per questo si era optato per un modello di sviluppo incrementale e con
  milestone stabilite in accordo con le esigenze di tutti.
@@ -730,7 +767,7 @@ Era importante coinvolgere il cliente e conteporaneamente fargli percepire
 Quello che si voleva raggiungere era ottenere risultati che potessero risultare
  credibili e vicini il più possibile a quella che sarebbe risultata essere
  la realtà di utilizzo.
- Non è difficile capire il perchè di questa esigenza: il cliente aveva bisogno
+ Non è difficile capire il perché di questa esigenza: il cliente aveva bisogno
  di sapere il prima possibile se la soluzione che si veniva a profilare
  poteva avere un reale impiego per cui valesse la pena spendere il proprio
  tempo e denaro.
@@ -739,7 +776,7 @@ azione delle gite, Primafrost e Wincor Nixdorf stavano mettendo a punto
  un sistema per il monitoraggio dei veicoli, per cui possiamo dire che la
  base di dati da utilizzata per gli esperimenti avrebbe coinciso con quella
  degli esperimenti.
- Non si trattava di dati particolarmente precisi, poichè anche il progetto
+ Non si trattava di dati particolarmente precisi, poiché anche il progetto
  di monitoraggio tuttavia era ancora allo stadio embrionale, e c'erano ancora
  diversi problemi nella fase della raccolta dei dati, ma erano sicuramente
  dati reali, vicini alla realtà di tutti i giorni.
@@ -761,7 +798,7 @@ affidabili
 
 \begin_layout Standard
 Per il resto è stato necessario solo un breve addestramento da parte di
- TPS nei nostri confronti per quanto riguardava i prodotti utilizzati, dopodichè
+ TPS nei nostri confronti per quanto riguardava i prodotti utilizzati, dopodiché
  eravamo già operativi.
 \end_layout
 
@@ -788,6 +825,43 @@ Il documento è suddiviso in 3 capitoli:
 
 \begin_layout Enumerate
 
+\series bold
+Stato dell'arte:
+\series default
+ in questo capitolo vengono descritti tutti i concetti importanti, le parole
+ chiave, gli algoritmi che poi saranno menzionati nel documento.
+ Viene anche presentato un approfondimento sul punto di vista delle aziende
+ coinvolte.
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+Architettura proposta:
+\series default
+ in questo capitolo viene presentato un approfondimento sulle architetture
+ proposte, sul lavoro ed i risultati ottenuti per lo studio di fattibilità,
+ e alcune conclusioni che sono state tratte.
+\end_layout
+
+\begin_layout Enumerate
+
+\series bold
+Implementazione:
+\series default
+ in quest'ultimo capitolo viene presentato un mio contributo personale ad
+ un problema affrontato nel capitolo 2 ma che era rimasto sostanzialmente
+ irrisolto.
+ Spiegando l'idea da cui sono partito, il procedimento da me adottato ed
+ i risultati finali è possibile formulare alcune ipotesi sulla struttura
+ dell'algoritmo sottostante il framework MEFISTO
+\end_layout
+
+\begin_layout Standard
+Al termine delle analisi e delle ipotesi mostrate all'interno dei capitoli,
+ si giunge quindi alle Conclusioni, in cui si discuterà delle criticità
+ che anora oggi esistono nell'affrontare problemi di questa tipologia.
+ Affermazioni ovviamente supportate dall'esperienza diretta da me compiuta.
 \end_layout
 
 \begin_layout Standard
@@ -1238,7 +1312,7 @@ Background
 \end_layout
 
 \begin_layout Standard
-In questa sezione è posibile trovare chiarimenti sui termini che verranno
+In questa sezione è possibile trovare chiarimenti sui termini che verranno
  usati nelle sezioni successive.
 \end_layout
 
@@ -1378,7 +1452,7 @@ reference "VRP"
 \end_inset
 
 ) l'insieme dei veicoli potrebbe tranquillamente essere composto anche da
- veicoli navali o aerei, senza cambiare di molto la tenica di soluzione
+ veicoli navali o aerei, senza cambiare di molto la tecnica di soluzione
  del problema stesso.
  Per questo in questo elaborato si parlerà in modo generico di 
 \begin_inset Quotes eld
@@ -1442,7 +1516,7 @@ Ogni punto di consegna possiede un identificativo univoco ed una serie di
 
 \begin_layout Standard
 La definizione dell'unità di misura della merce è in genere definita o concordat
-a con l'uitlizzatore finale, quindi nel caso di merci possono essere pallet,
+a con l'utilizzatore finale, quindi nel caso di merci possono essere pallet,
  roll, ecc.
  o anche confezioni singole.
 \end_layout
@@ -1628,7 +1702,7 @@ Euristica di Clarke e Wright
 \end_layout
 
 \begin_layout Standard
-L'euristica di Clarke and Wright
+L'euristica di Clarke e Wright
 \begin_inset CommandInset ref
 LatexCommand ref
 reference "The-Vehicle-Routing-Problem"
@@ -1639,7 +1713,7 @@ reference "The-Vehicle-Routing-Problem"
 \begin_inset Quotes eld
 \end_inset
 
-algoritmo dei risparmi di Clarke and Wright
+algoritmo dei risparmi di Clarke e Wright
 \begin_inset Quotes erd
 \end_inset
 
@@ -1687,11 +1761,11 @@ j
 
 , ovvero la distanza che si è risparmiato tornando al deposito una volta
  di meno.
- I risparmi vengono quindi ordinati in modo non crecente.
+ I risparmi vengono quindi ordinati in modo non crescente.
 \end_layout
 
 \begin_layout Standard
-La fusione delle gite può essere fatta in due modi: sequienziale o parallelo.
+La fusione delle gite può essere fatta in due modi: sequenziale o parallelo.
 \end_layout
 
 \begin_layout Standard
@@ -1708,7 +1782,7 @@ Nel caso sequenziale invece si esamina una gita per volta, e si cerca tra
 
 \begin_layout Standard
 I risultati sperimentali dicono che la versione parallela è più performante
- di quella seuenziale, e quindi in questo elaborato quando ci si riferirà
+ di quella sequenziale, e quindi in questo elaborato quando ci si riferirà
  a questa euristica si intenderà sempre la sua versione parallela.
 \end_layout
 
